; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/resampler/extr_resample.c_MDFN_resampler_process_interleaved_float.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/resampler/extr_resample.c_MDFN_resampler_process_interleaved_float.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }

@RESAMPLER_ERR_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @speex_resampler_process_interleaved_float(%struct.TYPE_4__* %0, float* %1, i64* %2, float* %3, i64* %4) #0 {
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca float*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca float*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store float* %1, float** %7, align 8
  store i64* %2, i64** %8, align 8
  store float* %3, float** %9, align 8
  store i64* %4, i64** %10, align 8
  %15 = load i64*, i64** %10, align 8
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %14, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %12, align 4
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %13, align 4
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 4
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  store i32 %25, i32* %29, align 4
  store i64 0, i64* %11, align 8
  br label %30

30:                                               ; preds = %64, %5
  %31 = load i64, i64* %11, align 8
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 4
  %35 = sext i32 %34 to i64
  %36 = icmp slt i64 %31, %35
  br i1 %36, label %37, label %67

37:                                               ; preds = %30
  %38 = load i64, i64* %14, align 8
  %39 = load i64*, i64** %10, align 8
  store i64 %38, i64* %39, align 8
  %40 = load float*, float** %7, align 8
  %41 = icmp ne float* %40, null
  br i1 %41, label %42, label %54

42:                                               ; preds = %37
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %44 = load i64, i64* %11, align 8
  %45 = load float*, float** %7, align 8
  %46 = load i64, i64* %11, align 8
  %47 = getelementptr inbounds float, float* %45, i64 %46
  %48 = load i64*, i64** %8, align 8
  %49 = load float*, float** %9, align 8
  %50 = load i64, i64* %11, align 8
  %51 = getelementptr inbounds float, float* %49, i64 %50
  %52 = load i64*, i64** %10, align 8
  %53 = call i32 @speex_resampler_process_float(%struct.TYPE_4__* %43, i64 %44, float* %47, i64* %48, float* %51, i64* %52)
  br label %63

54:                                               ; preds = %37
  %55 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %56 = load i64, i64* %11, align 8
  %57 = load i64*, i64** %8, align 8
  %58 = load float*, float** %9, align 8
  %59 = load i64, i64* %11, align 8
  %60 = getelementptr inbounds float, float* %58, i64 %59
  %61 = load i64*, i64** %10, align 8
  %62 = call i32 @speex_resampler_process_float(%struct.TYPE_4__* %55, i64 %56, float* null, i64* %57, float* %60, i64* %61)
  br label %63

63:                                               ; preds = %54, %42
  br label %64

64:                                               ; preds = %63
  %65 = load i64, i64* %11, align 8
  %66 = add nsw i64 %65, 1
  store i64 %66, i64* %11, align 8
  br label %30

67:                                               ; preds = %30
  %68 = load i32, i32* %12, align 4
  %69 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %70 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %69, i32 0, i32 0
  store i32 %68, i32* %70, align 4
  %71 = load i32, i32* %13, align 4
  %72 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %73 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %72, i32 0, i32 1
  store i32 %71, i32* %73, align 4
  %74 = load i32, i32* @RESAMPLER_ERR_SUCCESS, align 4
  ret i32 %74
}

declare dso_local i32 @speex_resampler_process_float(%struct.TYPE_4__*, i64, float*, i64*, float*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
